--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Jogue na Mega!!"
+            android:text=""
             android:id="@+id/textsensation"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="48dp" />
