--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,5 +47,13 @@
             android:id="@+id/textsensation"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="48dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text=""
+            android:id="@+id/pointScore"
+            android:layout_alignParentTop="true" />
     </RelativeLayout>
 </RelativeLayout>
